<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<ScrollView
			android:id="@+id/firearm_disposition_content"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin">

		<GridLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:rowCount="5"
				android:columnCount="2"
				android:useDefaultMargins="true"
				android:layout_gravity="center_horizontal">

			<!-- Date -->
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_row="0"
					android:layout_column="0"
					android:textColor="@android:color/holo_blue_dark"
					android:text="@string/label_firearm_disposition_date" />

			<TextView
					android:id="@+id/firearm_disposition_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_row="0"
					android:layout_column="1"
					android:layout_gravity="left"
					android:hint="@string/hint_firearm_disposition_date" />

			<!-- To -->
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_row="1"
					android:layout_column="0"
					android:textColor="@android:color/holo_blue_dark"
					android:text="@string/label_firearm_disposition_to" />

			<TextView
					android:id="@+id/firearm_disposition_to"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_row="1"
					android:layout_column="1"
					android:layout_gravity="left"
					android:hint="@string/hint_firearm_disposition_to" />

			<!-- License -->
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_row="2"
					android:layout_column="0"
					android:textColor="@android:color/holo_blue_dark"
					android:text="@string/label_firearm_disposition_license" />

			<TextView
					android:id="@+id/firearm_disposition_license"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_row="2"
					android:layout_column="1"
					android:layout_gravity="left"
					android:hint="@string/hint_firearm_disposition_license" />

			<!-- Address -->
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_row="3"
					android:layout_column="0"
					android:textColor="@android:color/holo_blue_dark"
					android:text="@string/label_firearm_disposition_address" />

			<TextView
					android:id="@+id/firearm_disposition_address"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_row="3"
					android:layout_column="1"
					android:layout_gravity="left"
					android:hint="@string/hint_firearm_disposition_address" />

			<!-- Price -->
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_row="4"
					android:layout_column="0"
					android:textColor="@android:color/holo_blue_dark"
					android:text="@string/label_firearm_acquisition_price" />

			<TextView
					android:id="@+id/firearm_disposition_price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_row="4"
					android:layout_column="1"
					android:layout_gravity="left"
					android:hint="@string/hint_firearm_disposition_price" />
		</GridLayout>
	</ScrollView>

	<TextView
			android:id="@+id/firearm_disposition_empty"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:visibility="gone"
			android:text="@string/label_firearm_disposition_empty" />
</RelativeLayout>
